// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacing deve renderizar corretamente 1`] = `
.emotion-0 {
  margin-top: 1rem;
  margin-right: 2rem;
  margin-bottom: 3rem;
  margin-left: 4rem;
  display: inline-block;
}

<div
  class="emotion-0"
>
  Content
</div>
`;

exports[`Spacing deve renderizar corretamente 2`] = `
.emotion-0 {
  margin-top: 1rem;
  margin-right: 2rem;
  margin-bottom: 3rem;
  margin-left: 4rem;
}

<div
  class="emotion-0"
>
  Content
</div>
`;
